--- a/views/vista.hbs
+++ b/views/vista.hbs
@@ -29,4 +29,9 @@
     {{else}}  
         <h3 class="alert alert-warning">No se encontraron productos</h3>
     {{/if}}
+    <div class="container pt-5">
+          <div class="col-md-12 text-center">
+            <a href="/" class="btn btn-primary">Ir a formulario</a>
+          </div>
+        </div>
 </div>
